# mission_manager

./: .gitignore  README.txt  package.xml  setup.cfg  setup.py
mission_manager/: client.py  mission_manager.py
mission_manager/examples/: README.md  auto_mission_manager.py  fsm_client.py  fsm_manager.py
mission_manager/examples/auto_mission_manager/: auto_mission_manager.py  fsm_client.py
mission_manager/examples/custom_command/: custom_command.py  custom_command_amm.py
mission_manager/examples/mock_mission_client/: mock_mission_client.py
